--- a/CSS/global.CSS
+++ b/CSS/global.CSS
@@ -3,14 +3,67 @@
   Aqui vamos a definir estilos y variables que se reutilicen en todo el sitio.
 
 */
+@font-face {
+  font-family: PoppinsBlack;
+  src: url(./assets/fonts/Poppins-Black.ttf) format(opentype);
+}
+
+@font-face {
+  font-family: PoppinsBlackItalic;
+  src: url(./assets/fonts/Poppins-BlackItalic.ttf) format(opentype);
+}
+
+@font-face {
+  font-family: PoppinsBold;
+  src: url(./assets/fonts/Poppins-Bold.ttf) format(opentype);
+}
+
+@font-face {
+  font-family: PoppinsBoldItalic;
+  src: url(./assets/fonts/Poppins-BoldItalic.ttf) format(opentype);
+}
+
+@font-face {
+  font-family: PoppinsExtraBold;
+  src: url(./assets/fonts/Poppins-ExtraBold.ttf) format(opentype);
+}
+
+@font-face {
+  font-family: PoppinsExtraLight;
+  src: url(./assets/fonts/Poppins-ExtraLight.ttf) format(opentype);
+}
+
+@font-face {
+  font-family: PoppinsLightItalic;
+  src: url(./assets/fonts/Poppins-ExtraLightItalic.ttf) format(opentype);
+}
+
+@font-face {
+  font-family: PoppinsItalic;
+  src: url(./assets/fonts/Poppins-Italic.ttf) format(opentype);
+}
+
+@font-face {
+  font-family: PoppinsLight;
+  src: url(./assets/fonts/Poppins-Light.ttf) format(opentype);
+}
+
+@font-face {
+  font-family: PoppinsMedium;
+  src: url(./assets/fonts/Poppins-Medium.ttf) format(opentype);
+}
+
+@font-face {
+  font-family: PoppinsRegular;
+  src: url(./assets/fonts/Poppins-Regular.ttf) format(opentype);
+}
 
 :root {
-  --light-color: #FFFFFF ;
+  --light-color: skyblue;
   --white-color: #FAF7F4 ;
   --dark-color: #000000 ;
   --blue-color: #147D89 ;
   --purple-color: #5B2BE5 ;
-  --degradadoapple-color: linear-gradient(#208FF8, #AB65FB, #F4482E) ;
   --font-primary: 'Poppins' ;
 }
 
@@ -30,3 +83,33 @@ h1,h2,h3,h4,h5,h6 {
   color: var(--dark-color);
 
 }
+
+/* Buttons */
+
+
+
+
+
+
+.button-primary {
+  display: flex;
+  align-items: center;
+  gap: var(--space-small);
+  padding: var(--space-small) var(--space-normal); 
+  background-color: var(--light-color);
+  color: var(--dark-color);
+  border-radius: 32px;
+  font-family: var(--font-primary);
+  text-transform: uppercase;
+  font-size: 1.125rem;
+  transition: background-color 0.3s ease;
+}
+
+
+
+
+
+.button-primary:hover {
+  color: var(--light-color);
+  background-color: var(--dark-gray);
+  
