Maquetamos y estilizamos la seccion hero

--- a/CSS/Style.Css
+++ b/CSS/Style.Css
@@ -104,3 +104,136 @@ h1 {
   color: var(--purple-color);
 }
 
+/* Hero */
+
+
+
+
+
+
+.hero {
+
+
+  height: 100vh;
+
+
+  min-height: 100px;
+
+
+  background-color: var(--white-color); /* No tengo imagen de fondo, solo es un color */
+
+
+
+
+
+/*      No hacer caso 
+
+
+background-image: url(../assets);
+
+
+background-size: cover;
+
+
+background-position: center;
+
+
+*/
+
+
+display: flex;
+
+
+justify-content: center;
+
+
+align-items: center;
+
+
+
+
+
+color: var(--dark-color);
+
+
+
+
+
+}
+
+
+
+
+
+.hero-content {
+
+
+  /* width: 50%; */
+
+
+}
+
+
+
+
+
+.hero-content p {
+
+
+  font-size: 1.125rem;
+
+
+  margin-bottom: var(--space-small);
+
+
+/*   max-width: 80%; */
+
+
+text-align: center;
+
+
+}
+
+
+
+
+
+.hero-actions {
+
+
+  display: flex;
+
+
+  gap: var(--space-small);
+
+
+  margin-bottom: var(--space-medium);
+
+
+  justify-content: center;
+
+
+}
+
+
+
+
+
+/*
+
+
+.hero-icons {
+  display: flex;
+  gap: var(--space-small);
+
+
+}
+
+
+*/
+
+
+.hero-text {
+  font-family: 'Poppins';
+}
+
