--- a/CSS/Style.Css
+++ b/CSS/Style.Css
@@ -1,62 +1,3 @@
-@font-face {
-  font-family: PoppinsBlack;
-  src: url(./assets/fonts/Poppins-Black.ttf) format(opentype);
-}
-
-@font-face {
-  font-family: PoppinsBlackItalic;
-  src: url(./assets/fonts/Poppins-BlackItalic.ttf) format(opentype);
-}
-
-@font-face {
-  font-family: PoppinsBold;
-  src: url(./assets/fonts/Poppins-Bold.ttf) format(opentype);
-}
-
-@font-face {
-  font-family: PoppinsBoldItalic;
-  src: url(./assets/fonts/Poppins-BoldItalic.ttf) format(opentype);
-}
-
-@font-face {
-  font-family: PoppinsExtraBold;
-  src: url(./assets/fonts/Poppins-ExtraBold.ttf) format(opentype);
-}
-
-@font-face {
-  font-family: PoppinsExtraLight;
-  src: url(./assets/fonts/Poppins-ExtraLight.ttf) format(opentype);
-}
-
-@font-face {
-  font-family: PoppinsLightItalic;
-  src: url(./assets/fonts/Poppins-ExtraLightItalic.ttf) format(opentype);
-}
-
-@font-face {
-  font-family: PoppinsItalic;
-  src: url(./assets/fonts/Poppins-Italic.ttf) format(opentype);
-}
-
-@font-face {
-  font-family: PoppinsLight;
-  src: url(./assets/fonts/Poppins-Light.ttf) format(opentype);
-}
-
-@font-face {
-  font-family: PoppinsMedium;
-  src: url(./assets/fonts/Poppins-Medium.ttf) format(opentype);
-}
-
-/*Estilos Personalizados
-Aqui vamos a estilar todas las secciones, sus contenidos y el responsivo.
-
-@font-face {
-  font-family: PoppinsRegular;
-  src: url(./assets/fonts/Poppins-Regular.ttf) format(opentype);
-}
-/* 
-
 /* Vinculamos Google Fonts y Material Icons */
 
 .navbar-menu {
@@ -65,7 +6,7 @@ Aqui vamos a estilar todas las secciones, sus contenidos y el responsivo.
 }
 
 body {
-  font-family: 'Poppins' ;
+  font-family: 'Poppins', sans-serif ;
   background-color: blue;
 }
 
@@ -98,142 +39,111 @@ h1 {
 .navbar-menu a {
   font-family: var(--font-primary);
   text-transform: uppercase;
+  color: var(--white-color);
 }
 
 .navbar-menu a:hover {
-  color: var(--purple-color);
+  color: var(--orange-color);
 }
 
 /* Hero */
 
-
-
-
-
-
 .hero {
-
-
   height: 100vh;
-
-
-  min-height: 100px;
-
-
-  background-color: var(--white-color); /* No tengo imagen de fondo, solo es un color */
-
-
-
-
-
-/*      No hacer caso 
-
-
-background-image: url(../assets);
-
-
-background-size: cover;
-
-
-background-position: center;
-
-
-*/
-
+  min-height: 700px;
+  background-color: var(--white-color);
 
 display: flex;
-
-
 justify-content: center;
-
-
 align-items: center;
-
-
-
-
-
 color: var(--dark-color);
-
-
-
-
-
 }
-
-
-
-
 
 .hero-content {
-
-
-  /* width: 50%; */
-
-
+ width: 50%;
 }
-
-
-
-
 
 .hero-content p {
-
-
-  font-size: 1.125rem;
-
-
+  /*font-size: 1.125rem;
   margin-bottom: var(--space-small);
+  max-width: 80%;
+text-align: center;*/
 
-
-/*   max-width: 80%; */
-
-
-text-align: center;
-
+ width: 100%;
+  border-radius: 1rem;
+  object-fit: cover;
 
 }
-
-
-
-
 
 .hero-actions {
-
-
   display: flex;
-
-
   gap: var(--space-small);
-
-
   margin-bottom: var(--space-medium);
-
-
   justify-content: center;
-
-
 }
 
-
-
-
-
-/*
 
 
 .hero-icons {
   display: flex;
   gap: var(--space-small);
-
-
 }
-
-
-*/
-
 
 .hero-text {
   font-family: 'Poppins';
 }
 
+/* Work */ 
+
+.work {
+  background-color: var(--light-color);
+}
+
+.work-header {
+  margin-bottom: 1rem;
+}
+
+.work-content {
+  display: flex;
+  align-items: center;
+}
+
+.work-thumbnails {
+  width: 50%;
+}
+
+.thumbnail-item {
+  border-radius: 1rem;
+  overflow: hidden;
+  cursor: pointer;
+  filter: brightness(0.7);
+  transition: filter 0.3s ease;
+}
+
+.thumbnail-item:hover {
+filter: brightness(1);
+}
+
+.thumbnails-list {
+  display: grid;
+  grid-template-columns: repeat (3, 1fr);
+  gap: var(--space-small);
+}
+
+.work-showcase {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: var(--space-medium);
+}
+
+.work-info {
+  text-align: center;
+}
+
+.work-image {
+  border-radius: 1rem;
+  display: flex;
+  gap: var(--space-medium);
+}
