--- a/CSS/global.CSS
+++ b/CSS/global.CSS
@@ -3,60 +3,6 @@
   Aqui vamos a definir estilos y variables que se reutilicen en todo el sitio.
 
 */
-@font-face {
-  font-family: PoppinsBlack;
-  src: url(./assets/fonts/Poppins-Black.ttf) format(opentype);
-}
-
-@font-face {
-  font-family: PoppinsBlackItalic;
-  src: url(./assets/fonts/Poppins-BlackItalic.ttf) format(opentype);
-}
-
-@font-face {
-  font-family: PoppinsBold;
-  src: url(./assets/fonts/Poppins-Bold.ttf) format(opentype);
-}
-
-@font-face {
-  font-family: PoppinsBoldItalic;
-  src: url(./assets/fonts/Poppins-BoldItalic.ttf) format(opentype);
-}
-
-@font-face {
-  font-family: PoppinsExtraBold;
-  src: url(./assets/fonts/Poppins-ExtraBold.ttf) format(opentype);
-}
-
-@font-face {
-  font-family: PoppinsExtraLight;
-  src: url(./assets/fonts/Poppins-ExtraLight.ttf) format(opentype);
-}
-
-@font-face {
-  font-family: PoppinsLightItalic;
-  src: url(./assets/fonts/Poppins-ExtraLightItalic.ttf) format(opentype);
-}
-
-@font-face {
-  font-family: PoppinsItalic;
-  src: url(./assets/fonts/Poppins-Italic.ttf) format(opentype);
-}
-
-@font-face {
-  font-family: PoppinsLight;
-  src: url(./assets/fonts/Poppins-Light.ttf) format(opentype);
-}
-
-@font-face {
-  font-family: PoppinsMedium;
-  src: url(./assets/fonts/Poppins-Medium.ttf) format(opentype);
-}
-
-@font-face {
-  font-family: PoppinsRegular;
-  src: url(./assets/fonts/Poppins-Regular.ttf) format(opentype);
-}
 
 :root {
   --light-color: skyblue;
@@ -64,40 +10,48 @@
   --dark-color: #000000 ;
   --blue-color: #147D89 ;
   --purple-color: #5B2BE5 ;
-  --font-primary: 'Poppins' ;
-}
+  --orange-color: orange;
+  --font-primary: 'Poppins',sans-serif;
+  --font-secondary: 'lilita One', sans-serif ;
 
+  --space-small: 16px;
+  --space-normal: 24px;
+  --space-medium: 32px;
+
+}
 
 body {
   font-family: var(--font-primary);
   background-color: var(--light-color);
+  color: var(--dark-color)
 }
-
-
-
-
 
 h1,h2,h3,h4,h5,h6 {
 
-  font-family: var(--font-primary);
+  font-family: var(--font-secondary);
   color: var(--dark-color);
+  text-transform: uppercase;
+}
 
+h2 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+h3 {
+  font-size: 1.75rem;
+  margin-bottom: 0.8rem;
 }
 
 /* Buttons */
-
-
-
-
-
 
 .button-primary {
   display: flex;
   align-items: center;
   gap: var(--space-small);
   padding: var(--space-small) var(--space-normal); 
-  background-color: var(--light-color);
-  color: var(--dark-color);
+  background-color: var(--dark-color);
+  color: var(--light-color);
   border-radius: 32px;
   font-family: var(--font-primary);
   text-transform: uppercase;
@@ -105,11 +59,35 @@ h1,h2,h3,h4,h5,h6 {
   transition: background-color 0.3s ease;
 }
 
-
-
-
-
 .button-primary:hover {
-  color: var(--light-color);
-  background-color: var(--dark-gray);
+  color: var(--light-color));
+  background-color: var(--purple-color);
+}
   
+.button-secondary {
+  display: flex;
+  align-items: center;
+  gap: var(--space-small);
+  padding: var(--space-small) var(--space-normal); 
+  background-color: var(--dark-color);
+  color: var(--light-color);
+  border-radius: 32px;
+  font-family: 'Poppins';
+  text-transform: uppercase;
+  font-size: 1.125rem;
+  transition: background-color 0.3s ease;
+}
+
+
+
+.button-secondary:hover {
+  color: var(--light-color);
+  background-color: var(--purple-color);
+}
+
+/* Wrapper */
+
+.wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+}
