--- a/CSS/resset.css
+++ b/CSS/resset.css
@@ -10,40 +10,22 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  text-decoration: none;
-  color: inherit;
 }
-
-
-
-
 
 a {
   text-decoration: none;
-  color: inherit
+  color: inherit;
 }
-
-
-
-
 
 ul,ol {
   list-style: none;
 }
 
-
-
-
-
 button {
   cursor: pointer;
-  background-color: none;
+  background-color: transparent;
   border: none;
 }
-
-
-
-
 
 img {
   max-width: 100%;
