--- a/CSS/global.CSS
+++ b/CSS/global.CSS
@@ -1,93 +1,120 @@
 /* 
   Estilos Globales
-  Aqui vamos a definir estilos y variables que se reutilicen en todo el sitio.
+  
+  Aquí vamos a definir estilos y variables que se reutilicen en todo el sitio.
 
 */
 
 :root {
-  --light-color: skyblue;
-  --white-color: #FAF7F4 ;
-  --dark-color: #000000 ;
-  --blue-color: #147D89 ;
-  --purple-color: #5B2BE5 ;
-  --orange-color: orange;
-  --font-primary: 'Poppins',sans-serif;
-  --font-secondary: 'lilita One', sans-serif ;
+    --green-color: #b97f00;
+    --dark-color: #171615;
+    --white-color: #FFFFFF;
+    --botom-color: #00146d;
+    --color-product: #262423;
 
-  --space-small: 16px;
-  --space-normal: 24px;
-  --space-medium: 32px;
+    --font-primary: 'Jersey 10';
+    --font-secondary: 'Jersey 10';
 
+    --green-color-transparent: #00718097; 
+
+    --space-small: 16px;
+    --space-normal: 24px;
+    --space-medium: 32px;
+    --space-large: 48px;
+    --space-xl: 56px;
+    --space-2xl: 64px;
+  
+    /* Height for Scroll Offset */
+    --offset-height: 124px;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
-  font-family: var(--font-primary);
-  background-color: var(--light-color);
-  color: var(--dark-color)
+    font-family: var(--font-primary);
+    background-color: var(--light-color);
+    color: var(--dark-color);
 }
 
-h1,h2,h3,h4,h5,h6 {
-
-  font-family: var(--font-secondary);
-  color: var(--dark-color);
-  text-transform: uppercase;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: var(--font-secondary);
+    color: var(--dark-color);
+    text-transform: uppercase;
 }
 
 h2 {
-  font-size: 2rem;
-  margin-bottom: 1rem;
+    font-size: 2rem;
+    margin-bottom: 1rem;
 }
 
 h3 {
-  font-size: 1.75rem;
-  margin-bottom: 0.8rem;
+    font-size: 1.75rem;
+    margin-bottom: 0.8rem;
 }
 
 /* Buttons */
 
+.button {
+    cursor: pointer;
+}
+
+section {
+    scroll-margin-top: var(--offset-height);
+    margin-bottom: var(--space-2xl);
+}
+
+section {
+    margin-bottom: var(--space-medium);
+}
+
 .button-primary {
-  display: flex;
-  align-items: center;
-  gap: var(--space-small);
-  padding: var(--space-small) var(--space-normal); 
-  background-color: var(--dark-color);
-  color: var(--light-color);
-  border-radius: 32px;
-  font-family: var(--font-primary);
-  text-transform: uppercase;
-  font-size: 1.125rem;
-  transition: background-color 0.3s ease;
+    display: flex;
+    align-items: center;
+    gap: var(--space-small);
+    padding: var(--space-small) var(--space-normal);
+    background-color: var(--dark-color);
+    color: var(--white-color);
+    border-radius: 32px;
+    font-family: var(--font-secondary);
+    text-transform: uppercase;
+    font-size: 1.125rem;
+    transition: background-color 0.3s ease;
 }
 
 .button-primary:hover {
-  color: var(--light-color));
-  background-color: var(--purple-color);
+    color: var(--dark-color);
+    background-color: var(--green-color);
 }
-  
+
 .button-secondary {
-  display: flex;
-  align-items: center;
-  gap: var(--space-small);
-  padding: var(--space-small) var(--space-normal); 
-  background-color: var(--dark-color);
-  color: var(--light-color);
-  border-radius: 32px;
-  font-family: 'Poppins';
-  text-transform: uppercase;
-  font-size: 1.125rem;
-  transition: background-color 0.3s ease;
+    display: flex;
+    align-items: center;
+    gap: var(--space-small);
+    padding: var(--space-small) var(--space-normal);
+    background-color: var(--dark-color);
+    color: var(--light-color);
+    border-radius: 32px;
+    font-family: var(--font-secondary);
+    text-transform: uppercase;
+    font-size: 1.125rem;
+    transition: background-color 0.3s ease;
 }
-
-
 
 .button-secondary:hover {
-  color: var(--light-color);
-  background-color: var(--purple-color);
+    color: var(--dark-color);
+    background-color: var(--green-color);
 }
 
 /* Wrapper */
 
 .wrapper {
-  max-width: 1200px;
-  margin: 0 auto;
+    max-width: 1200px;
+    margin: 0 auto;
 }
